--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,11 @@
 @tailwind utilities;
 /* @import url("./styles/hideScrollbar.css"); */
 
+/* html {
+  -ms-overflow-style: none !important;
+  scrollbar-width: none !important;
+} */
+
 .datepickerCss::placeholder {
   color: #1c1c1c;
   font-size: 12px;
