--- a/src/styles/hideScroll.css
+++ b/src/styles/hideScroll.css
@@ -1,11 +1,16 @@
-.customScroll{
+.customScroll {
   overflow: auto;
-} 
+}
 
 .customScroll::-webkit-scrollbar {
   width: 0;
 }
 
-.sticky{
-    width: 8% !important;
+.sticky {
+  width: 8% !important;
+}
+
+html {
+  -ms-overflow-style: none !important;
+  scrollbar-width: none !important;
 }
